# hotelai

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
00-arquitectura/: README.md
01-agente-concierge/: README.md
02-agente-canal/: README.md
03-agente-reservas/: README.md
04-agente-guest-lifecycle/: README.md
db/: schema.sql  seeds.sql
hotelai/: __init__.py  audit.py  auth_router.py  db.py  email_router.py  gmail.py  knowledge.py  lifecycle_router.py  llm.py  rooms_router.py  schemas.py  server.py  settings.py  state.py
hotelai/agents/: __init__.py  concierge.py  lifecycle.py  reservas.py
hotelai/agents/tools/: __init__.py  db_tools.py
hotelai/canal/: __init__.py  handler.py  router.py
tests/: conftest.py  test_concierge_adversarial.py  test_reservas_adversarial.py  test_schemas.py
